Modificacion de solorzano.html e index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="es">
   <head>
 
@@ -61,7 +61,7 @@
             <li><a href="#">Eric</a></li>
             <li><a href="#">Mariela</a></li>
             <li><a href="#">Armando</a></li>
-            <li><a href="#">Solorzano</a></li>
+            <li><a href="solorzano.html">Solorzano</a></li>
             <li><a href="#">Rafaga</a></li>
             <li><a href="#">Horacio</a></li>
             <li><a href="#">Samuel</a></li>
