--- a/solorzano.html
+++ b/solorzano.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="es">
   <head>
 
@@ -92,7 +92,7 @@
           </div>
           <div class="col-md-5">
             <div class="informacion">
-              <h1 class="name text-uppercase">Instituto Tecnológico Superior de Ciudad Hidalgo</h1>
+              <h1 class="name text-uppercase">Armando Solorzano Solorzano</h1>
               <div class="title">Ingenieria en Sistemas</div>
             </div>
           </div>
@@ -113,7 +113,7 @@
             </ul>
           </div>
             <div class="description">
-              <p>El ingeniero en Sistemas computacionales es una persona profesional, comprometida con la generación de tecnología para el progreso de México.</p>
+              <p>Formando ingenieros para el futuro.</p>
           </div>
         </div>
     </header>
@@ -126,42 +126,31 @@
           <h3 class="resume-position-title font-weight-bold mb-1">OBJETIVO GENERALr</h3>
             <div class="resume-position-time">2018 - presente</div>
           <p>
-            Formar profesionistas líderes, analíticos, críticos y creativos, con visión estratégica y amplio sentido ético, capaces de diseñar, implementar y administrar infraestructura computacional para aportar soluciones innovadoras en beneficio de la sociedad, en un contexto global, multidisciplinario y sustentable.
+              Ser agente de cambio en la implantación de nuevas tecnologías para fomentar la modernización de las Mypymes.
           </p>
          <hr>
           <h3 class="resume-position-title font-weight-bold mb-1">PERFIL DE EGRESO:</h3>
             <div class="resume-position-time">2016 - 2023</div>
           <p>
-            Diseñar, configurar y administrar redes computacionales aplicando las normas y estándares vigentes.
-Desarrollar, implementar y administrar software de sistemas o de aplicación que cumpla con los estándares de calidad con el fin de apoyar la productividad y competitividad de las organizaciones.
-Coordinar y participar en proyectos interdisciplinarios.
-Diseñar e implementar interfaces hombre‐máquina y máquina‐máquina para la automatización de sistemas.
-Identificar y comprender las tecnologías de hardware para proponer, desarrollar y mantener aplicaciones eficientes.
+              Especialista en sistemas operativos, manejo de sistemas de cómputo a bajo nivel. Experto en sistemas de seguridad informática y como jobi torturar alumnos.
           </p>
         </div>
         <div class="col-md-4 mb-5">
           <h2>MATERIAS</h2>
           <br>
-          <span>Ingeniería de Requerimientos</span>
+          <span>Sistemas operativos</span>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
-          <span>Arquitectura y Diseño de Software</span>
+          <span>Fundamento de redes</span>
           <div class="progress">
             <div class="progress-bar " role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
-           <span>Proceso Personal para el Desarrollo de Software</span>
+           <span>Algoritmos para industrial</span>
           <div class="progress">
             <div class="progress-bar " role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
-          <span>Modelo de Desarrollo Integral</span>
-          <div class="progress">
-            <div class="progress-bar " role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-          <span>Verificación y Validación de Software</span>
-          <div class="progress">
-            <div class="progress-bar " role="progressbar" style="width: 88%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
+          
         </div>
       </div>
       <div class="row">
@@ -190,7 +179,7 @@ Identificar y comprender las tecnologías de hardware para proponer, desarrollar
             </div>
             <div class="col-md-9">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
           </div>
