Actualizando lopez.html, agregando referencia al index, y cargando una imagen de usuario.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <li><a href="#">Iraic</a></li>
             <li><a href="#">Eric</a></li>
             <li><a href="#">Mariela</a></li>
-            <li><a href="#">Armando</a></li>
+            <li><a href="lopez.html">Armando</a></li>
             <li><a href="#">Solorzano</a></li>
             <li><a href="#">Rafaga</a></li>
             <li><a href="#">Horacio</a></li>
