--- a/iraic.html
+++ b/iraic.html
@@ -92,20 +92,20 @@
           </div>
           <div class="col-md-5">
             <div class="informacion">
-              <h1 class="name text-uppercase">Instituto Tecnológico Superior de Ciudad Hidalgo</h1>
-              <div class="title">Ingenieria en Sistemas</div>
+              <h1 class="name text-uppercase">Jose Iraic Alcantar Alcantar</h1>
+              <div class="title">Ingeniero en Sistemas Computacionales</div>
             </div>
           </div>
           <div class="col-md-5">
             <ul class="resumen-social">
               <li class="mb-3">
-                <span><b>Av. </b> Ing. Carlos Rojas Gutiérrez 2120</span>
+                <span><b>Calle:</b>Colima No. 22</span>
               </li>
               <li class="mb-3">
-                <span><b>Fraccionamiento:</b> Valle de la Herradura</span>
+                <span><b>Colonia:</b> La Mangana</span>
               </li>
               <li class="mb-3">
-                <span><b>Teléfono:</b> (786) 154-90-00</span>
+                <span><b>Teléfono:</b> (786) 154-04-76</span>
               </li>
               <li class="mb-3">
                 <span><b>Ciudad.</b> Hidalgo Michoacán</span>
@@ -113,7 +113,7 @@
             </ul>
           </div>
             <div class="description">
-              <p>El ingeniero en Sistemas computacionales es una persona profesional, comprometida con la generación de tecnología para el progreso de México.</p>
+              <p>Docente del ITSCH desde 2005, principalmente en areas de programacion web, redes, servidores y bases de datos.</p>
           </div>
         </div>
     </header>
@@ -123,63 +123,49 @@
           <div class="row titulos mb-5">
             <i class="fas fa-angle-down"></i><span style="font-size: 1.25rem; font-weight: 700;">Experiencia laboral</span>
           </div>
-          <h3 class="resume-position-title font-weight-bold mb-1">OBJETIVO GENERALr</h3>
+          <h3 class="resume-position-title font-weight-bold mb-1">TRABAJOS</h3>
             <div class="resume-position-time">2018 - presente</div>
-          <p>
-            Formar profesionistas líderes, analíticos, críticos y creativos, con visión estratégica y amplio sentido ético, capaces de diseñar, implementar y administrar infraestructura computacional para aportar soluciones innovadoras en beneficio de la sociedad, en un contexto global, multidisciplinario y sustentable.
-          </p>
+            <p>Docente del la Academia de Ingenieria en Sistemas Computacionales.</p>
+            <div class="resume-position-time">2016 - 2017</div>
+            <p>Jefe de Division de Ingenieria en Sistemas Computacionales.</p>
+            <div class="resume-position-time">2012 - 2015</div>
+            <p>Jefe de Division en Ingeniria en Tecnologias de la Informacion y Comunicaciones.</p>
+            <div class="resume-position-time">2005 - 2012</div>
+            <p>Docente del la Academia de Ingenieria en Sistemas Computacionales.</p>
          <hr>
-          <h3 class="resume-position-title font-weight-bold mb-1">PERFIL DE EGRESO:</h3>
-            <div class="resume-position-time">2016 - 2023</div>
-          <p>
-            Diseñar, configurar y administrar redes computacionales aplicando las normas y estándares vigentes.
-Desarrollar, implementar y administrar software de sistemas o de aplicación que cumpla con los estándares de calidad con el fin de apoyar la productividad y competitividad de las organizaciones.
-Coordinar y participar en proyectos interdisciplinarios.
-Diseñar e implementar interfaces hombre‐máquina y máquina‐máquina para la automatización de sistemas.
-Identificar y comprender las tecnologías de hardware para proponer, desarrollar y mantener aplicaciones eficientes.
-          </p>
+          <h3 class="resume-position-title font-weight-bold mb-1">FORMACION</h3>
+            <div class="resume-position-time">2000 - 2005</div>
+            <p>Ingeniairia en Sistemas Computacionales.</p>
+            <div class="resume-position-time">1997 - 2000</div>
+            <p>Profesional Tecnico en Contabilidad.</p>
         </div>
         <div class="col-md-4 mb-5">
           <h2>MATERIAS</h2>
           <br>
-          <span>Ingeniería de Requerimientos</span>
+          <span>Lenguajes y Automatas I</span>
           <div class="progress">
             <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
-          <span>Arquitectura y Diseño de Software</span>
+          <span>Programacion Web Avanzada</span>
           <div class="progress">
             <div class="progress-bar " role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
-           <span>Proceso Personal para el Desarrollo de Software</span>
+           <span>Simulacion</span>
           <div class="progress">
             <div class="progress-bar " role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-          <span>Modelo de Desarrollo Integral</span>
-          <div class="progress">
-            <div class="progress-bar " role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-          <span>Verificación y Validación de Software</span>
-          <div class="progress">
-            <div class="progress-bar " role="progressbar" style="width: 88%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-md-8">
           <div class="row titulos mb-5 align-items-center">
-            <i class="fas fa-angle-down"></i><span style="font-size: 1.25rem; font-weight: 700;">NUESTRO FUTURO</span>
+            <i class="fas fa-angle-down"></i><span style="font-size: 1.25rem; font-weight: 700;">OTRAS ACTIVIDADES</span>
           </div>
-          <h3 class="resume-position-title font-weight-bold mb-1">Campo de trabajo</h3>
-            <div class="resume-position-time">2018 - presente</div>
-          <p>
-           Es uno de los más amplios de las carreras que se ofrecen en el país, ya que los sistemas computacionales se están ampliando en todos los ámbitos, por poner ejemplos mencionaremos la medicina, la educación, la investigación, la industria y el desarrollo. Los cargos que el Ingeniero en Sistemas Computacionales podrá tener son: Gerente de sistemas, director de área de una amplia gama de procesos y proyectos tecnológicos, administrador de centros de cómputo, administrador de bases de datos, administrador de servidores multiplataforma, creador y administrador de proyectos de data warehouse, programador de aplicaciones en los niveles junior, sénior, master, arquitecto de software, consultor de empresas públicas y privadas así como de gobierno, administrador de redes de comunicaciones, creador y verificador de certificados digitales CFDI, web master, etc. Además formar sus propias empresas de creación e instalación de redes, desarrollo de software, administración de bases de datos, diseño, creación y montaje de sitios web, creador de proyectos de comercio electrónico, creación de aplicaciones para dispositivos móviles, mantenimiento preventivo y correctivo de equipo de cómputo.
-          </p>
-         <hr>
-          <h3 class="resume-position-title font-weight-bold mb-1">INFRAESTRUCTURA</h3>
-            <div class="resume-position-time">2016 - 2017</div>
-          <p>
-            La carrera de Ingeniería en sistemas computacionales es una de las carreras que en el ITSCH cuenta con la mayor infraestructura para poder brindar un servicio de calidad a todos sus estudiantes además de ser una carrera que cuenta con acreditación CACEI que es un centro de acreditación de carreras a nivel nacional, lo que garantiza que la educación impartida en este programa es de alta calidad, además de que es reconocido a nivel nacional e internacional.
-          </p>
+          <h3 class="resume-position-title font-weight-bold mb-1">FORMACION</h3>
+            <div class="resume-position-time">2000 - 2005</div>
+            <p>Ingeniairia en Sistemas Computacionales.</p>
+            <div class="resume-position-time">1997 - 2000</div>
+            <p>Profesional Tecnico en Contabilidad.</p>
         </div>
         <div class="col-md-4 mb-5">
           <h2>Lenguajes</h2>
