--- a/solorzano.html
+++ b/solorzano.html
@@ -37,6 +37,8 @@
   </head>
 
 
+
+
   <body>
     <div class="container">
     <header>
@@ -113,7 +115,7 @@
             </ul>
           </div>
             <div class="description">
-              <p>Formando ingenieros para el futuro.</p>
+              <p>El ingeniero en Sistemas computacionales es una persona profesional, comprometida con la generación de tecnología para el progreso de México.</p>
           </div>
         </div>
     </header>
@@ -126,13 +128,17 @@
           <h3 class="resume-position-title font-weight-bold mb-1">OBJETIVO GENERALr</h3>
             <div class="resume-position-time">2018 - presente</div>
           <p>
-              Ser agente de cambio en la implantación de nuevas tecnologías para fomentar la modernización de las Mypymes.
+            Formar profesionistas líderes, analíticos, críticos y creativos, con visión estratégica y amplio sentido ético, capaces de diseñar, implementar y administrar infraestructura computacional para aportar soluciones innovadoras en beneficio de la sociedad, en un contexto global, multidisciplinario y sustentable.
           </p>
          <hr>
           <h3 class="resume-position-title font-weight-bold mb-1">PERFIL DE EGRESO:</h3>
             <div class="resume-position-time">2016 - 2023</div>
           <p>
-              Especialista en sistemas operativos, manejo de sistemas de cómputo a bajo nivel. Experto en sistemas de seguridad informática y como jobi torturar alumnos.
+            Diseñar, configurar y administrar redes computacionales aplicando las normas y estándares vigentes.
+Desarrollar, implementar y administrar software de sistemas o de aplicación que cumpla con los estándares de calidad con el fin de apoyar la productividad y competitividad de las organizaciones.
+Coordinar y participar en proyectos interdisciplinarios.
+Diseñar e implementar interfaces hombre‐máquina y máquina‐máquina para la automatización de sistemas.
+Identificar y comprender las tecnologías de hardware para proponer, desarrollar y mantener aplicaciones eficientes.
           </p>
         </div>
         <div class="col-md-4 mb-5">
@@ -146,11 +152,18 @@
           <div class="progress">
             <div class="progress-bar " role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
-           <span>Algoritmos para industrial</span>
+           <span>Algoritmos</span>
           <div class="progress">
             <div class="progress-bar " role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
-          
+          <span>Modelo de Desarrollo Integral</span>
+          <div class="progress">
+            <div class="progress-bar " role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <span>Verificación y Validación de Software</span>
+          <div class="progress">
+            <div class="progress-bar " role="progressbar" style="width: 88%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
         </div>
       </div>
       <div class="row">
