Agregando archivo mariela.html

--- a/mariela.html
+++ b/mariela.html
@@ -92,8 +92,8 @@
           </div>
           <div class="col-md-5">
             <div class="informacion">
-              <h1 class="name text-uppercase">Instituto Tecnológico Superior de Ciudad Hidalgo</h1>
-              <div class="title">Ingenieria en Sistemas</div>
+              <h1 class="name text-uppercase">Mariela Chavez</h1>
+              <div class="title">Maestra en Gestion de Tecnologías de la Información</div>
             </div>
           </div>
           <div class="col-md-5">
@@ -113,7 +113,7 @@
             </ul>
           </div>
             <div class="description">
-              <p>El ingeniero en Sistemas computacionales es una persona profesional, comprometida con la generación de tecnología para el progreso de México.</p>
+              <p>Docente de la Academia de Ingeniería en Sistemas Computacionales.</p>
           </div>
         </div>
     </header>
@@ -146,15 +146,15 @@ Identificar y comprender las tecnologías de hardware para proponer, desarrollar
           <div class="progress">
             <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
-          <span>Arquitectura y Diseño de Software</span>
+          <span>Fundamentos de Ing. de Software</span>
           <div class="progress">
             <div class="progress-bar " role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
-           <span>Proceso Personal para el Desarrollo de Software</span>
+           <span>Ingeniería de Software</span>
           <div class="progress">
             <div class="progress-bar " role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
-          <span>Modelo de Desarrollo Integral</span>
+          <span>Gestión de Proyectos de software</span>
           <div class="progress">
             <div class="progress-bar " role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
