--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <li><a href="#">Oscar</a></li>
             <li><a href="#">Iraic</a></li>
             <li><a href="#">Eric</a></li>
-            <li><a href="#">Mariela</a></li>
+            <li><a href="mariela.html">Mariela</a></li>
             <li><a href="#">Armando</a></li>
             <li><a href="#">Solorzano</a></li>
             <li><a href="#">Rafaga</a></li>
